services/keycloak/vpc.tf
resource "aws_vpc" "keycloak_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "keycloak-vpc"
  }
}

resource "aws_subnet" "keycloak_subnet_public" {
  count             = 2
  vpc_id            = aws_vpc.keycloak_vpc.id
  cidr_block        = "10.0.${count.index + 1}.0/24"
  availability_zone = "us-east-1${count.index == 0 ? "a" : "b"}"

  tags = {
    Name = "keycloak-public-${count.index + 1}"
  }
}

resource "aws_subnet" "keycloak_subnet_private" {
  count             = 2
  vpc_id            = aws_vpc.keycloak_vpc.id
  cidr_block        = "10.0.${count.index + 10}.0/24"
  availability_zone = "us-east-1${count.index == 0 ? "a" : "b"}"

  tags = {
    Name = "keycloak-private-${count.index + 1}"
  }
}
